# lox-interpreter

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  lox_grammar.bnf
cpp-lox/: CMakeLists.txt  cpp-lox.cpp  cpp-lox.h
examples/: hello_world.lox
include/: ast_printer.h  callable.h  environment.h  function.h  interpreter.h  lox.h  object.h  parser.h  runtime_error.h  scanner.h  token.h  token_type.h  utils.h
include/expr/: assign_expr.h  ast_printer.h  binary_expr.h  call_expr.h  expr.h  expr_visitor.h  grouping_expr.h  literal_expr.h  logical_expr.h  unary_expr.h  variable_expr.h
include/stmt/: block_stmt.h  expression_stmt.h  function_stmt.h  if_stmt.h  stmt.h  (+5 more)
lib/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
src/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ast_printer.cpp  cmake_install.cmake  cpplox.vcxproj  cpplox.vcxproj.filters  environment.cpp  function.cpp  interpreter.cpp  lox-executable.vcxproj  lox-executable.vcxproj.filters  lox.cpp  main.cpp  parser.cpp  runtime_error.cpp  scanner.cpp  token.cpp  utils.cpp
src/expr/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  assign_expr.cpp  ast_printer.cpp  binary_expr.cpp  call_expr.cpp  cmake_install.cmake  grouping_expr.cpp  literal_expr.cpp  logical_expr.cpp  unary_expr.cpp  variable_expr.cpp
src/stmt/: CMakeLists.txt  block_stmt.cpp  expression_stmt.cpp  function_stmt.cpp  if_stmt.cpp  print_stmt.cpp  return_stmt.cpp  var_stmt.cpp  while_stmt.cpp
tests/: CMakeLists.txt  expression_test.cpp  scanner_test.cpp  statement_test.cpp  test_utils.h
